fix z-index nav-more dropdown

--- a/src/css/6-components/components.nav-more.scss
+++ b/src/css/6-components/components.nav-more.scss
@@ -22,6 +22,7 @@
 }
 
 .c-nav-more__dropdown {
+  z-index: 1000;
   position: absolute;
   top: 100%;
   right: 0;
